@@ -20,6 +20,7 @@ git (1:1.7.7-1.1) unstable; urgency=low
       gitexecdir.
   * debian/rules: add NO_HARDLINKS=1 to OPTS (thx Bastian Blank;
     closes: #642603).
+  * debian/rules: do not rely on umask to set contrib permissions.
   * update debian/copyright.
   * debian/watch, debian/copyright: point to code.google.com for now.
     The upstream tarballs haven't been added back to kernel.org yet.
